Fix delay to win message
Also fixed manifest.json

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -24,7 +24,7 @@
     }
   ],
   "start_url": "https://susie.rbrignall.org.uk/",
-  "background_color": "ffffff",
+  "background_color": "#ffffff",
   "display": "standalone",
   "theme_color": "#ffffff",
   "description": "Can you guess Susie's word"
